--- a/style.css
+++ b/style.css
@@ -1,14 +1,104 @@
 body {
-  min-height: 100vh;
+  height: 100vh;
   width: 100vw;
   margin: 0;
 }
 
 #navbar {
   display: flex;
+  height:30px;
   justify-content: space-between;
   align-items: center;
   color: white;
   background-color: #225a86;
+  padding: 20px;
+}
+
+#main {
+  display: flex;
+  background-image: ;
+  flex-direction: column; 
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #000000;
+}
+
+#header{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #862274;
+}
+
+#block-cards{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #223886;
   padding: 30px;
+}
+
+.home-cards{
+  min-height: 300px;
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #ffffff;
+  padding: 30px;
+  margin: 50px;
+}
+
+#form{
+  display: flex;
+  width: 80%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #bcc6bc;
+  padding: 30px;
+  margin: 50px;
+}
+#date{
+  display: flex;
+  width: 80%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #bcc6bc;
+  padding: 30px;
+  margin: 50px;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
+input[type=date] {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
+.button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
