--- a/style.css
+++ b/style.css
@@ -10,18 +10,31 @@ body {
   justify-content: space-between;
   align-items: center;
   color: white;
-  background-color: #225a86;
+  background-color: #ffffff;
   padding: 20px;
 }
 
-#main {
+#logo-container > h3{
+  color: #04AA6D;
+  font-weight: 800;
+}
+#pages-container > p{
+  color: #000000;
+}
+#pages-container {
   display: flex;
-  background-image: ;
+  gap: 15px;
+}
+
+#main {
+  background-image: url(./images/background.jpg);
+  background-size: cover;
+  height: 95%;
+  display: flex;
   flex-direction: column; 
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   color: white;
-  background-color: #000000;
 }
 
 #header{
@@ -31,7 +44,6 @@ body {
   justify-content: center;
   align-items: center;
   color: white;
-  background-color: #862274;
 }
 
 #block-cards{
@@ -40,21 +52,20 @@ body {
   justify-content: center;
   align-items: center;
   color: white;
-  background-color: #223886;
-  padding: 30px;
-}
+} 
 
 .home-cards{
-  min-height: 300px;
-  min-width: 300px;
   display: flex;
+  width: 400px;
+  height: 400px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: white;
   background-color: #ffffff;
-  padding: 30px;
-  margin: 50px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
 }
 
 #form{
@@ -66,7 +77,7 @@ body {
   color: white;
   background-color: #bcc6bc;
   padding: 30px;
-  margin: 50px;
+  margin: 10px;
 }
 #date{
   display: flex;
@@ -77,19 +88,28 @@ body {
   color: white;
   background-color: #bcc6bc;
   padding: 30px;
-  margin: 50px;
+  margin: 10px;
+}
+
+#results{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  padding: 30px;
+  margin: 10px;
+  
 }
 
 input[type=text] {
   width: 100%;
   padding: 12px;
-  margin: 10px 0;
   box-sizing: border-box;
 }
 input[type=date] {
   width: 100%;
   padding: 12px;
-  margin: 10px 0;
   box-sizing: border-box;
 }
 .button {
@@ -101,4 +121,15 @@ input[type=date] {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+
+#img-home{
+display: flex;
+justify-content: center;
+align-items: center;
+border-bottom:4px solid #04AA6D;
+}
+
+h3{
+color: #000000;
 }
