--- a/style.css
+++ b/style.css
@@ -2,42 +2,46 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
+  padding: 0;
 }
 
 #navbar {
   display: flex;
-  height:30px;
+  height: 30px;
   justify-content: space-between;
   align-items: center;
   color: white;
-  background-color: #ffffff;
+  background-color: white;
   padding: 20px;
 }
 
-#logo-container > h3{
-  color: #04AA6D;
+#logo-container > h3 > a {
+  text-decoration: none;
+  color: #50a787;
   font-weight: 800;
 }
-#pages-container > p{
-  color: #000000;
-}
+
 #pages-container {
   display: flex;
   gap: 15px;
 }
 
+#pages-container > p > a {
+  text-decoration: none;
+  color: black;
+}
+
 #main {
   background-image: url(./images/background.jpg);
   background-size: cover;
-  height: 95%;
+  height: 90%;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  color: white;
 }
 
-#header{
+#header {
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -46,74 +50,86 @@ body {
   color: white;
 }
 
-#block-cards{
+#header > h1 {
+  font-weight: 800;
+}
+
+#header > h2 {
+  font-weight: 400;
+}
+
+#block-cards {
   display: flex;
   width: 100%;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  color: white;
-} 
+}
 
-.home-cards{
+.home-cards {
   display: flex;
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  color: white;
   background-color: #ffffff;
-  padding: 10px;
+  padding: 20px;
   margin: 10px;
   border-radius: 10px;
 }
 
-#form{
+#form {
   display: flex;
-  width: 80%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white;
-  background-color: #bcc6bc;
-  padding: 30px;
-  margin: 10px;
-}
-#date{
-  display: flex;
-  width: 80%;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  background-color: #bcc6bc;
-  padding: 30px;
-  margin: 10px;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
-#results{
+#date {
+  display: flex;
+  width: max-content;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#results {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white;
-  padding: 30px;
-  margin: 10px;
-  
+  gap: 15px;
+  width: 100%;
+  height: 100%;
 }
 
-input[type=text] {
-  width: 100%;
-  padding: 12px;
-  box-sizing: border-box;
+#separator {
+  height: 10px;
+  width: 80%;
+  border-bottom: solid 2px #4da985;
 }
-input[type=date] {
-  width: 100%;
+
+input[type="text"] {
+  width: 90%;
   padding: 12px;
-  box-sizing: border-box;
+  border-radius: 0.375rem;
+  border: none;
+  background-color: #eff2f1;
 }
+
+input[type="date"] {
+  width: 90%;
+  padding: 12px;
+  border: none;
+  border-radius: 0.375rem;
+  background-color: #eff2f1;
+}
+
 .button {
-  background-color: #04AA6D; /* Green */
+  background-color: #4da985; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -121,15 +137,19 @@ input[type=date] {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  width: 100%;
+  border-radius: 0.375rem;
 }
 
-#img-home{
-display: flex;
-justify-content: center;
-align-items: center;
-border-bottom:4px solid #04AA6D;
-}
+/* #img-home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 4px solid #04aa6d;
+  width: 50px;
+  height: 50px;
+} */
 
-h3{
-color: #000000;
+h3 {
+  color: #000000;
 }
