--- a/style.css
+++ b/style.css
@@ -78,6 +78,21 @@ body {
   border-radius: 10px;
 }
 
+.list-trip {
+  overflow-y: auto;
+}
+
+.trip {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #f5eeee;
+  padding: 5px;
+  width: 100%;
+  border-radius: 0.375rem;
+}
+
 #form {
   display: flex;
   flex-direction: column;
@@ -99,7 +114,7 @@ body {
 #results {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 15px;
   width: 100%;
@@ -141,14 +156,16 @@ input[type="date"] {
   border-radius: 0.375rem;
 }
 
-/* #img-home {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom: 4px solid #04aa6d;
-  width: 50px;
-  height: 50px;
-} */
+.book-button {
+  background-color: #4da985; /* Green */
+  border: none;
+  color: white;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 0.375rem;
+}
 
 h3 {
   color: #000000;
