--- a/cart.css
+++ b/cart.css
@@ -49,7 +49,6 @@ body {
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem;
   gap: 10px;
-  padding: 10px;
 }
 
 #cart-container > h4 {
@@ -57,16 +56,45 @@ body {
   font-weight: 200;
 }
 
-.travel{
+.travel {
   display: flex;
   height: 100%;
   min-width: 80%;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(246, 209, 146);
+  background-color: #f5eeee;
   font-weight: 400;
-  border-top-left-radius: 0.375rem;
-  border-top-right-radius: 0.375rem;
+  border-radius: 0.375rem;
   padding: 5px;
+}
+
+#total {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  background-color: #02153c;
+  color: white;
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
+.purchase-button {
+  background-color: #4da985; /* Green */
+  border: none;
+  color: white;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 0.375rem;
+}
+
+.delete {
+  background-color: #4da985; /* Green */
+  border: none;
+  color: white;
+  border-radius: 0.375rem;
+  padding: 5px 8px;
 }
