--- a/cart.css
+++ b/cart.css
@@ -89,6 +89,7 @@ body {
   text-decoration: none;
   font-size: 16px;
   border-radius: 0.375rem;
+  cursor: pointer;
 }
 
 .delete {
@@ -97,4 +98,5 @@ body {
   color: white;
   border-radius: 0.375rem;
   padding: 5px 8px;
+  cursor: pointer;
 }
