--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ input[type="date"] {
   font-size: 16px;
   width: 100%;
   border-radius: 0.375rem;
+  cursor: pointer;
 }
 
 .book-button {
@@ -165,6 +166,7 @@ input[type="date"] {
   text-decoration: none;
   font-size: 16px;
   border-radius: 0.375rem;
+  cursor: pointer;
 }
 
 h3 {
